@@ -271,9 +271,9 @@ user:(:- extern(call(+term))).
 add_input_callback :-
 	get(@pce, window_system, windows), !.
 add_input_callback :-
-	predicate_property(qui:init_qui, _), !,
-	xt_create_app_context(App),
-	pce_appcontext(App, App).
+	predicate_property(qui:'QP_GetQuiAppContext', _), !,
+	qui:'QP_GetQuiAppContext'(XtAppContext),
+	pce_appcontext(XtAppContext, XtAppContext).
 add_input_callback :-
 	send(@display, open),
 	get(@display, connection_fd, FD),
